# td3-pattern

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
src/: config.rs  main.rs  midicomm.rs  notetime.rs  pattern.rs  step.rs  time.rs
