[package]
name = "td3-pattern"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
midir = "0.7.0"
argmap = "1.1.1"
scan_fmt = "0.2.6"
